--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,16 @@ sudo: required
 script:
 - bash test.sh
 
+
+
+deploy:
+  provider: releases
+  api_key: "d22433f5c10800da31ecca6e1ee964a2c2f2cf9c"
+  file: hello.sh
+  skip_cleanup: true
+  on:
+repo: nikcbg/travis4
+    tags: true
+
+
+
